# go-eval

./: .gitignore  hello_world.go  printer.go  restservice.go
callee-service/: application.go  go.mod
callee-service/service/: callee.go  calleeservice.go
catalog/: product.go
doc/: !script.md  go.md  rust.md  todo.md  wasm.md
family/: go.mod  main.go
family/father/: father.go
go/: main.go  restservice.go  saymyname.go
go/callee-service/: Dockerfile  application.go  build.sh  go.mod  go.sum
go/callee-service-gofr/: application.go  build.sh  callee.go  main.go
go/div/: restservice.go  restservice_new.go
go/person-service/: application.go  go.mod  main.go
lua/src/: apisix.lua  decode.lua  hash.lua  http.lua  jwt-subject.lua  socket-http.lua  socket.lua  subject.lua  test.lua
python/callee-service-python/: .env  Dockerfile  build.sh  pyproject.toml  readme.md
python/callee-service-python/src/callee_service/: config.py  main.py
python/callee-service-python/src/callee_service/controller/: callee_controller.py
python/callee-service-python/src/callee_service/controller/dto/: callee.py
python/callee-service-python/src/callee_service/extensions/: exception_handler.py  http_interceptor.py  monitoring_extension.py  user_context.py
python/callee-service-python/src/callee_service/logic/: callee_logic.py
python/callee-service-python/src/callee_service/static/: index.html
spin/: spin.md
typescript/: readme.md
wasm/: build.sh  index.html  index.js  main.go  restservice.go  saymyname.wasm
web-service-gin/: application.go  go.mod
(+92 files in other folders)
