[project]
name = "callee-service"
version = "1.0.0"
description = "Callee Service - Python/FastAPI equivalent of callee-service-quarkus"
requires-python = ">=3.12"
dependencies = [
    # web
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # monitoring
    "prometheus-fastapi-instrumentator>=7.0.0",
    # tracing
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.28.0",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
    # config
    "pydantic-settings>=2.6.0",
    # static files
    "aiofiles>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/callee_service"]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]
